# freestream-milne

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  README~  Run  cleanMake.sh  cleanMake.sh~  cleanMakeRun.sh  freestream_input  freestream_input2D  parameters.dat~  run.sh
Run.dSYM/Contents/Resources/DWARF/: Run
mathematica/: getQuadratureTable.nb  plot.nb
output/: Parameters.txt
src/: #LandauMatch.cpp#  CMakeLists.txt  CMakeLists.txt~  Config.h  EquationOfState.cpp  FSConfig.h  FSUtilities.cpp  FileIO.cpp  FreeStream.cpp  FreestreamMilne.cpp  FreestreamMilne.cpp~  HydroValidity.cpp  InitialConditions.cpp  LandauMatch.cpp  Memory.cpp  Memoryf.cpp  Parameter.h  Parameters.h  Run.cpp  RunFreestreamMilne.cpp  RunWrapper.cpp  Utilities.cpp  testWrapper.cpp
src/EoS/: lqcd_eos_muQ_eq_muS_eq_0.txt  lqcd_eos_nQ_eq_0.4nB_nS_eq_0.txt
src/jail/wrapper/: cleanMakeRun.sh  freestream_input
src/wrapper/: FreestreamMilne.cpp  Makefile  MakefileOld  freestream_input  testWrapper  testWrapper.cpp
